--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
                             <li><a href="#">Tags</a></li>
                            <li><a href="#">Users</a></li>
                            {% if request.user.is_authenticated %}
+                            <li><a href="{% url 'qa:ask' %}">Ask</a></li>
                            
                             <li><a href="#">Profile</a></li>
                            <li><a href="{% url 'users:logout' %}">Logout</a></li>
