answering feature and tag-wise questions listing added

--- a/qa/templates/qa/qdetail.html
+++ b/qa/templates/qa/qdetail.html
@@ -64,7 +64,7 @@ votes
                     
                         {{ qobj.ans_list.count }} answers
                     
-                    </span><u><a href="#" >Want to answer?</a></u>
+                    </span><u><a target="_blank" href="{% url 'qa:ans' qobj.id %}" >Want to answer?</a></u>
 </div>
 
                         <div class="row">
