--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         </div>
                         <ul class="nav navbar-nav">
                             <li><a href="{% url 'qa:questions' %}">Questions</a></li>
-                            <li><a href="#">Tags</a></li>
+                            <li><a href="{% url 'home:tags' %}">Tags</a></li>
                            <li><a href="#">Users</a></li>
                            {% if request.user.is_authenticated %}
                             <li><a href="{% url 'qa:ask' %}">Ask</a></li>
