--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,8 @@
                             <li><a href="{% url 'qa:questions' %}">Questions</a></li>
                             <li><a href="{% url 'home:tags' %}">Tags</a></li>
                            <li><a href="#">Users</a></li>
+                           <li><a href="/search">Search Query</a></li>
+                           
                            {% if request.user.is_authenticated %}
                             <li><a href="{% url 'qa:ask' %}">Ask</a></li>
                            
