--- a/qa/templates/qa/qlist.html
+++ b/qa/templates/qa/qlist.html
@@ -83,7 +83,7 @@ votes
                     </span>
 
                                 <span class="pull-right" style="text-align: left;">
-                                    <small>- {{obj.user.username}}</small>
+                                    <small>- <a href="{{obj.user.get_absolute_url}}">{{obj.user.username}}</a></small>
                                    
                                 </span>
                 </div>
