--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block title%}
-SignUp|{{ block.super }}
+Login|{{ block.super }}
 {% endblock %}
 {% block css %} 
 {% endblock %}
